<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">PauPark</string>
    <string name="settings_name">Préférences</string>
    
    <string name="settings_action">Préférences</string>
    <string name="search_action">Trouver</string>
    <string name="add_parking_tip_action">+ bon plan</string>
    <string name="refresh_action">Recharger</string>
    
    <string name="save_settings_action">Enregistrer</string>
    <string name="save_parking_tip_action">Enregistrer</string>
    
    <string name="up_vote_tip_action">Up vote</string>
    <string name="down_vote_tip_action">Down vote</string>
    <string name="locate_parking_action">Show on map</string>
    
    <string name="tab_parkings">Parkings</string>
    <string name="tab_tips">Bons plans</string>
    
    <string name="pager_default_current_page_indicator">1 / 10</string>
    <string name="pager_per_page_label">Par page: </string>
    <string name="pager_per_page_default">10</string>
    <string name="pager_direct_access_label">Page ?</string>
    
    <string name="filter_by_distance_label">Distance &lt;</string>
    <string name="filter_by_distance_no_values">Aucun résultat</string>
    <string name="filter_by_distance_0m_label">Illimité</string>
    <string name="filter_by_distance_250m_label">250m</string>
    <string name="filter_by_distance_500m_label">500m</string>
    <string name="filter_by_distance_1000m_label">1000m</string>
    <string name="filter_by_distance_2500m_label">2500m</string>
    <string name="filter_by_distance_5000m_label">5000m</string>
    <string name="filter_by_distance_10000m_label">10000m</string>
    <string-array name="filter_by_distance_values">
        <item>Illimité</item>
        <item>250m</item>
        <item>500m</item>
        <item>1km</item>
        <item>2,5km</item>
        <item>5km</item>
        <item>10km</item>
    </string-array>

    <string name="filter_by_distance_default">1000m</string>
    
    <string name="pager_button_first">first</string>
    <string name="pager_button_first_description">First page</string>
    <string name="pager_button_previous">prev</string>
    <string name="pager_button_previous_description">Previous page</string>
    <string name="pager_button_next">next</string>
    <string name="pager_button_next_description">Next page</string>
    <string name="pager_button_last">last</string>
    <string name="pager_button_last_description">Last page</string>
    
    <string name="pref_geoloc_text_view">Géolocalisation</string>
    <string name="pref_pagination_text_view">Pagination</string>
    <string name="pref_nickname_text_view">Pseudo</string>
    <string name="pref_nickname_edit_text_hint">Your name</string>
    
    <string name="new_parking_creator_nickname">Pseudo</string>
    <string name="new_parking_name">Nom du parking</string>
    <string name="new_parking_city">Commune</string>
    <string name="new_parking_size">Nombre de places</string>
    <string name="new_parking_size_error">Veuillez fournir le nombre de places du parking</string>
    <string name="new_parking_pricing">Payant</string>
    <string name="new_parking_type">Ouvrage</string>
    <string name="new_parking_coordinates">Coordonnées</string>
    <string name="new_parking_comment">Commentaire</string>
    <string name="new_parking_comment_error">Veuillez fournir un commentaire</string>
    
    <string name="new_parking_creator_nickname_hint">Pseudo</string>
    <string name="new_parking_creator_nickname_default">Anonyme</string>
    <string name="new_parking_creator_nickname_error">Veuillez fournir un pseudo</string>
    <string name="new_parking_name_hint">Nom du parking</string>
    <string name="new_parking_name_error">Veuillez fournir un nom pour le parking</string>
    <string name="new_parking_city_hint">Commune</string>
    <string name="new_parking_city_error">Veuillez fournir un nom de commune</string>
    <string name="new_parking_coordinates_longitude_hint">Longitude en degrés</string>
    <string name="new_parking_coordinates_longitude_error">Veuillez fournir la longitude</string>
    <string name="new_parking_coordinates_latitude_hint">Latitude en degrés</string>
    <string name="new_parking_coordinates_latitude_error">Veuillez fournir la latitude</string>
    <string name="new_parking_comment_hint">Accessibilité, fréquentation, etc.</string>

    <string name="parking_isfree">Gratuit</string>
    <string name="parking_isnotFree">Payant</string>
    <string name="parking_vacancy">place</string>
    <string name="parking_vacancyPlural">places</string>
    <string name="parking_noVacancy">Complet</string>
    
    <string name="parking_craft_opened">Plein air</string>
    <string name="parking_craft_underground">Souterrain</string>
    
    <string name="google_maps_url">http://maps.google.com/maps</string>
    <string name="google_maps_default_zoom">16</string>
    
    <string name="network_status_down">Connexion réseau interrompue</string>
    <string name="geolocation_status_disabled">La géolocalisation n\'est pas activée.</string>
    <string name="geocoding_unavailable">Le géocodage n\'est pas disponible.</string>
    <string name="geocoding_failed">Le géocodage a échoué</string>
    
    <string name="parking_official_source">http://opendata.agglo-pau.fr/sc/webserv.php?serv=getSj&amp;ui=542293D8B5&amp;did=18&amp;proj=WGS84</string>
    
    <string name="parking_user_tip_all">http://paupark.novacrea.fr/getTips.php</string>
    <string name="parking_user_tip_add">http://paupark.novacrea.fr/addTip.php?</string>
<!--     <string name="add_tip_url_params">name=%s&town=%s&comment=%s&free=%d&ouvrage=%s&lat=%f&lng=%f&description=%s&pseudo=%s&vacancy=%d</string> -->
    <string name="parking_user_tip_select">http://paupark.novacrea.fr/getTip.php?</string>
<!--     <string name="get_tip_url_params">id=%d</string> -->
    <string name="parking_user_tip_upvote">http://paupark.novacrea.fr/upvote.php</string>
<!--     <string name="upvote_tip_url_params">id=%d</string> -->
    <string name="parking_user_tip_downvote">http://paupark.novacrea.fr/downvote.php</string>
<!--     <string name="downvote_tip_url_params">id=%d</string> -->
</resources>
