<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    
    <item android:id="@+id/settingsAction"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/settings_action"/>
    
    <item android:id="@+id/searchAction"
        android:title="@string/search_action"
        android:icon="@android:drawable/ic_menu_search"
        android:actionViewClass="android.widget.SearchView"
        android:showAsAction="ifRoom"/>
     
    <item android:id="@+id/addParkingTipAction"
        android:title="@string/add_parking_tip_action"
        android:icon="@android:drawable/ic_input_add"
        android:showAsAction="ifRoom"/>
     
    <item android:id="@+id/refreshAction"
        android:title="@string/refresh_action"
        android:icon="@android:drawable/ic_menu_rotate"
        android:showAsAction="ifRoom"/>
    
</menu>
