<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
 		android:weightSum="1.0" >

        <TextView
            android:id="@+id/textView1"
            android:layout_height="wrap_content"
            android:layout_width="0dip"
			android:layout_weight=".5"
            android:text="@string/new_parking_creator_nickname" />

        <EditText
            android:id="@+id/newParkingCreatorNickname"
            android:layout_height="wrap_content"
            android:layout_width="0dip"
			android:layout_weight=".5"
            android:ems="10"
            android:hint="@string/new_parking_creator_nickname_hint"
            android:inputType="textPersonName" >

            <requestFocus />
        </EditText>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
 		android:weightSum="1.0" >

        <TextView
            android:id="@+id/textView2"
            android:layout_height="wrap_content"
            android:layout_width="0dip"
			android:layout_weight=".5"
            android:text="@string/new_parking_name" />

        <EditText
            android:id="@+id/newParkingName"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:ems="10"
            android:hint="@string/new_parking_name_hint"
            android:inputType="text" >

        </EditText>

    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
 		android:weightSum="1.0" >

        <TextView
            android:id="@+id/textView3"
            android:layout_height="wrap_content"
            android:layout_width="0dip"
			android:layout_weight=".5"
            android:text="@string/new_parking_city" />

        <EditText
            android:id="@+id/newParkingCity"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:ems="10"
            android:hint="@string/new_parking_city_hint"
            android:inputType="text" >

        </EditText>

    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
 		android:weightSum="1.0" >

        <TextView
            android:id="@+id/textView4"
            android:layout_height="wrap_content"
            android:layout_width="0dip"
			android:layout_weight=".5"
            android:text="@string/new_parking_size" />

        <EditText
            android:id="@+id/newParkingSize"
            android:layout_height="wrap_content"
            android:layout_width="0dip"
			android:layout_weight=".5"
            android:ems="10"
            android:inputType="number" />

    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
 		android:weightSum="1.0" >

        <TextView
            android:id="@+id/textView5"
            android:layout_height="wrap_content"
            android:layout_width="0dip"
			android:layout_weight=".5"
            android:text="@string/new_parking_pricing" />

        <CheckBox
            android:id="@+id/newParkingPricing"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5" />

    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
 		android:weightSum="1.0" >

        <TextView
            android:id="@+id/textView6"
            android:layout_height="wrap_content"
            android:layout_width="0dip"
			android:layout_weight=".5"
            android:text="@string/new_parking_type" />

        <Spinner
            android:id="@+id/newParkingType"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5" />

    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
 		android:weightSum="1.0" >

        <TextView
            android:id="@+id/textView7"
            android:layout_height="wrap_content"
            android:layout_width="0dip"
			android:layout_weight=".5"
            android:text="@string/new_parking_coordinates" />

        <CheckBox
            android:id="@+id/newParkingCoordinateActivation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".1" />

        <EditText
            android:id="@+id/newParkingCoordinateLongitude"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".2"
            android:ems="10"
            android:hint="@string/new_parking_coordinates_longitude_hint"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/newParkingCoordinateLatitude"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".2"
            android:ems="10"
            android:hint="@string/new_parking_coordinates_latitude_hint"
            android:inputType="numberDecimal" />

    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
 		android:weightSum="1.0" >

        <TextView
            android:id="@+id/textView8"
            android:layout_height="wrap_content"
            android:layout_width="0dip"
			android:layout_weight=".5"
            android:text="@string/new_parking_comment" />

        <EditText
            android:id="@+id/newParkingComment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:ems="10"
            android:inputType="textMultiLine" />

    </LinearLayout>
    
</LinearLayout>
