<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="${relativePackage}.${activityClass}" >

    <!-- Pager Header -->
   <LinearLayout
       	android:id="@+id/pager_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/darker_gray" >

        <TextView
            android:id="@+id/pager_current_page_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/pager_default_current_page_indicator"
            android:textSize="12sp" />

<!--         <View -->
<!--             android:layout_width="1dp" -->
<!--             android:layout_height="match_parent" -->
<!--             android:layout_weight="1" /> Put some space -->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/filter_by_distance_label"
            android:textSize="12sp" />

        <Spinner
            android:id="@+id/filter_by_distance_spinner"
            android:entries="@array/filter_by_distance_values"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/pager_per_page_label"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/pager_seek_bar_indicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/pager_per_page_default"
            android:textSize="12sp" />

        <SeekBar
            android:id="@+id/pager_per_page_seek"
            android:layout_width="10dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:max="10"
            android:progress="1" />
    </LinearLayout>

    <!-- Item list -->
    <ViewSwitcher
        android:id="@+id/viewswitcher"
        android:layout_width="match_parent"
        android:layout_weight="2.17"
        android:layout_height="wrap_content" >
        
    <ListView
        android:id="@+id/parkingsListHolder"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:listSelector="@drawable/list_selector" />
        
    <ListView
        android:id="@+id/parkingsListHolderBis"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:listSelector="@drawable/list_selector" />
    
    </ViewSwitcher>
    
    <!-- Pager Footer -->

    <LinearLayout
        android:id="@+id/pager_footer"
        android:layout_width="wrap_content"
        android:layout_height="23dp"
        android:layout_gravity="center"
        android:layout_weight="0.04"
        android:background="@android:color/darker_gray"
        android:orientation="horizontal" >
        
		<ImageButton
		    android:id="@+id/pager_button_first"
		    style="?android:attr/buttonBarButtonStyle"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:src="@drawable/ic_action_first_item"
		    android:text="@string/pager_button_first"
		    android:contentDescription="@string/pager_button_first_description"
		    android:textSize="12sp"
			android:background="?android:attr/selectableItemBackground" />

	     <View
	         android:layout_width="1dip"
	         android:layout_height="wrap_content"
	         android:layout_marginBottom="4dip"
	         android:layout_marginTop="4dip"
	         android:background="?android:attr/dividerVertical" />
        
		<ImageButton
		    android:id="@+id/pager_button_previous"
		    style="?android:attr/buttonBarButtonStyle"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:src="@drawable/ic_action_previous_item"
		    android:text="@string/pager_button_previous"
		    android:contentDescription="@string/pager_button_previous_description"
		    android:textSize="12sp"
			android:background="?android:attr/selectableItemBackground" />
		
		<View
		    android:layout_width="1dip"
		    android:layout_height="wrap_content"
		    android:layout_marginBottom="4dip"
		    android:layout_marginTop="4dip"
		    android:background="?android:attr/dividerVertical" />

		<ImageButton
		    android:id="@+id/pager_direct_access_button"
		    style="?android:attr/buttonBarButtonStyle"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:src="@android:drawable/ic_menu_more"
		    android:text="@string/pager_button_next"
		    android:contentDescription="@string/pager_button_next_description"
		    android:textSize="12sp"
			android:background="?android:attr/selectableItemBackground" />

		<View
		    android:layout_width="1dip"
		    android:layout_height="wrap_content"
		    android:layout_marginBottom="4dip"
		    android:layout_marginTop="4dip"
		    android:background="?android:attr/dividerVertical" />
		 	        
		<ImageButton
		    android:id="@+id/pager_button_next"
		    style="?android:attr/buttonBarButtonStyle"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:src="@drawable/ic_action_next_item"
		    android:text="@string/pager_button_next"
		    android:contentDescription="@string/pager_button_next_description"
		    android:textSize="12sp"
			android:background="?android:attr/selectableItemBackground" />

		<View
		    android:layout_width="1dip"
		    android:layout_height="wrap_content"
		    android:layout_marginBottom="4dip"
		    android:layout_marginTop="4dip"
		    android:background="?android:attr/dividerVertical" />
		
		<ImageButton
		    android:id="@+id/pager_button_last"
		    style="?android:attr/buttonBarButtonStyle"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:src="@drawable/ic_action_last_item"
		    android:text="@string/pager_button_last"
		    android:contentDescription="@string/pager_button_last_description"
		    android:textSize="12sp"
			android:background="?android:attr/selectableItemBackground" />
		
	</LinearLayout>

</LinearLayout>